--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "lushdigital/microservice-model-utils": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~5.0"
+    "phpunit/phpunit": "~5.0",
+    "apigen/apigen": "4.2.x-dev"
   },
   "autoload": {
     "psr-4": {
